Added stories about stories

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,18 +7,24 @@
     "ESPEN",
     "flavourful",
     "garam",
+    "glycaemic",
     "julienned",
     "Magnuson",
     "masala",
+    "maximise",
+    "Monetisation",
     "Mooradian",
     "Nutr",
+    "Optimisation",
     "poppadums",
     "Poulos",
     "psyllium",
     "Renwick",
     "shiratake",
     "Sucralose",
+    "surströmming",
     "Tokuda",
+    "trnsc",
     "Valrhona"
   ]
 }
