Custard tarts and sausages w brussels sprouts

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,8 +5,10 @@
     "carb",
     "chocolatiers",
     "Clin",
+    "crème",
     "ESPEN",
     "flavourful",
+    "fraiche",
     "garam",
     "glycaemic",
     "julienned",
