--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
     "caramelised",
     "carb",
     "chocolatiers",
+    "chokladbollar",
+    "chokoladbollar",
     "Clin",
     "crème",
     "ESPEN",
