--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,27 @@
 {
   "cSpell.words": [
+    "Arroz",
+    "BEHAVIOURS",
     "Carakostas",
     "caramelised",
     "carb",
     "chocolatiers",
     "chokladbollar",
     "chokoladbollar",
+    "choy",
     "Clin",
     "crème",
+    "cremini",
+    "criss",
+    "dente",
+    "deseeded",
+    "Entrecôte",
     "ESPEN",
+    "flavonoids",
     "flavourful",
+    "folate",
     "fraiche",
+    "fraîche",
     "Fybrogel",
     "garam",
     "glycaemic",
@@ -20,22 +31,32 @@
     "masala",
     "maximise",
     "Mecrh",
+    "minimise",
     "Monetisation",
     "Mooradian",
     "Nutr",
     "Optimisation",
+    "passata",
+    "Pollo",
     "poppadums",
+    "porcini",
+    "Portobello",
     "Poulos",
     "psyllium",
+    "purée",
     "Renwick",
     "shiratake",
+    "shirataki",
     "Sideritis",
+    "stevia",
     "Sucralose",
     "surströmming",
     "Tokuda",
     "trnsc",
     "unflavoured",
     "Valrhona",
-    "Xanthan"
+    "velouté",
+    "Xanthan",
+    "ziplock"
   ]
 }
