--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,61 +1,93 @@
 {
   "cSpell.words": [
+    "analysing",
     "Arroz",
+    "beany",
+    "behaviour",
     "BEHAVIOURS",
+    "besan",
     "Bluesky",
     "Carakostas",
     "caramelised",
     "carb",
+    "centrepiece",
     "chocolatiers",
     "chokladbollar",
     "chokoladbollar",
     "choy",
     "Clin",
+    "coeliac",
     "crème",
     "cremini",
     "criss",
     "dente",
     "deseeded",
+    "dosa",
+    "dosas",
     "Entrecôte",
     "ESPEN",
+    "favourable",
+    "flatbreads",
     "flavonoids",
     "flavourful",
     "folate",
     "fraiche",
     "fraîche",
     "Fybrogel",
+    "galettes",
     "garam",
+    "gari",
     "glycaemic",
     "Initialise",
+    "injera",
+    "isoflavone",
+    "isoflavones",
     "julienned",
     "Magnuson",
     "masala",
     "maximise",
     "Mecrh",
+    "micronutrients",
     "minimise",
+    "Minimises",
     "Monetisation",
     "Mooradian",
     "nori",
     "Nutr",
     "Optimisation",
+    "overconsumption",
     "passata",
+    "phytoestrogen",
     "Pollo",
     "poppadums",
     "porcini",
     "Portobello",
     "Poulos",
+    "prebiotic",
     "psyllium",
     "purée",
+    "queijo",
+    "Raita",
     "Renwick",
+    "rotis",
+    "rutin",
+    "scoopable",
     "shiratake",
     "shirataki",
     "Sideritis",
+    "stabilise",
+    "stabilises",
+    "stabilising",
     "stevia",
+    "stirfry",
     "Sucralose",
     "surströmming",
+    "teff",
     "Tokuda",
     "trnsc",
     "unflavoured",
+    "utilised",
+    "utilising",
     "Valrhona",
     "velouté",
     "Xanthan",
