--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
   "cSpell.words": [
+    "Accu",
+    "Accuchek",
     "analysing",
     "Arroz",
     "beany",
@@ -11,6 +13,7 @@
     "caramelised",
     "carb",
     "centrepiece",
+    "Chek",
     "chocolatiers",
     "chokladbollar",
     "chokoladbollar",
@@ -20,6 +23,7 @@
     "crème",
     "cremini",
     "criss",
+    "Customisable",
     "Customisation",
     "dente",
     "deseeded",
@@ -28,6 +32,7 @@
     "Entrecôte",
     "ESPEN",
     "favourable",
+    "Fitbit",
     "flatbreads",
     "flavonoids",
     "flavourful",
@@ -45,6 +50,7 @@
     "isoflavone",
     "isoflavones",
     "julienned",
+    "ketoacidosis",
     "Magnuson",
     "masala",
     "maximise",
@@ -56,7 +62,9 @@
     "Mooradian",
     "nori",
     "Nutr",
+    "Omron",
     "Optimisation",
+    "organise",
     "overconsumption",
     "Overmixing",
     "passata",
@@ -89,11 +97,13 @@
     "Tokuda",
     "trnsc",
     "unflavoured",
+    "urlset",
     "utilised",
     "utilising",
     "Valrhona",
     "velouté",
     "Xanthan",
+    "Zinzino",
     "ziplock"
   ]
 }
