Added spelling to workplace settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
     "choy",
     "Clin",
     "coeliac",
+    "coeliacs",
     "crème",
     "cremini",
     "criss",
@@ -59,6 +60,7 @@
     "minimise",
     "Minimises",
     "Monetisation",
+    "monococcum",
     "Mooradian",
     "nori",
     "Nutr",
@@ -66,6 +68,7 @@
     "Optimisation",
     "organise",
     "overconsumption",
+    "overmix",
     "Overmixing",
     "passata",
     "phytoestrogen",
@@ -95,6 +98,7 @@
     "surströmming",
     "teff",
     "Tokuda",
+    "Triticum",
     "trnsc",
     "unflavoured",
     "urlset",
