Yoghurt berry ice cream

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,6 +47,7 @@
     "gari",
     "glucan",
     "glycaemic",
+    "icecream",
     "Initialise",
     "injera",
     "isoflavone",
@@ -57,6 +58,7 @@
     "masala",
     "maximise",
     "Mecrh",
+    "melty",
     "micronutrients",
     "minimise",
     "Minimises",
